Редактирует header под pixelperfect

--- a/source/index.html
+++ b/source/index.html
@@ -19,21 +19,23 @@
             <img class="logo__image" width="32" height="36" src="images/logo-mobile.svg" alt="Логотип магазина. Двойка в фиолетовом круге">
           </picture>
         </a>
-        <a class="main-nav__account" href="#">
-          <span class="visually-hidden">Войти в личный кабинет</span>
-        </a>
-        <a class="main-nav__basket" href="#">
-          <span class="visually-hidden">Корзина</span>
-        </a>
-        <button class="main-nav__btn btn-burger" type="button">
-          <span class="visually-hidden">Открыть/закрыть меню</span>
-        </button>
-        <ul class="main-nav__list">
-          <li class="main-nav__item"><a class="main-nav__link main-nav__link--active" href="index.html" aria-current="page">Главная</a></li>
-          <li class="main-nav__item"><a class="main-nav__link" href="catalog.html">Каталог&nbsp;продукции</a></li>
-          <li class="main-nav__item"><a class="main-nav__link" href="#">Доставка</a></li>
-          <li class="main-nav__item"><a class="main-nav__link" href="#">О нас</a></li>
-        </ul>
+        <div class="main-nav__group">
+          <a class="main-nav__account" href="#">
+            <span class="visually-hidden">Войти в личный кабинет</span>
+          </a>
+          <a class="main-nav__basket" href="#">
+            <span class="visually-hidden">Корзина</span>
+          </a>
+          <button class="main-nav__btn btn-burger" type="button">
+            <span class="visually-hidden">Открыть/закрыть меню</span>
+          </button>
+          <ul class="main-nav__list">
+            <li class="main-nav__item"><a class="main-nav__link main-nav__link--active" href="index.html" aria-current="page">Главная</a></li>
+            <li class="main-nav__item"><a class="main-nav__link" href="catalog.html">Каталог&nbsp;продукции</a></li>
+            <li class="main-nav__item"><a class="main-nav__link" href="#">Доставка</a></li>
+            <li class="main-nav__item"><a class="main-nav__link" href="#">О нас</a></li>
+          </ul>
+        </div>
       </nav>
     </header>
     <main>
