--- a/source/index.html
+++ b/source/index.html
@@ -40,6 +40,28 @@
     </header>
     <main>
       <h1 class="visually-hidden">Интернет-магазин кофейных напитков</h1>
+      <section class="slider">
+        <h2 class="visually-hidden">Слайдер.Новинки</h2>
+        <div class="container slider__container">
+          <button class="slider__button slider__button__left"></button>
+          <div class="slider-card slider__element">
+            <h3 class="slider-card__title">Декаф Флэт Уайт</h3>
+            <picture>
+              <source type="image/svg+xml" width="600" height="600" media="(min-width: 1440px)" srcset="#">
+              <source type="image/svg+xml" width="476" height="476" media="(min-width: 768px)" srcset="#">
+              <img class="slider__card-image" width="280" height="280" src="images/flat-white-img-mobile@1x.png" srcset="images/flat-white-img-mobile@1x.webp, images/flat-white-img-mobile@2x.webp 2x" alt="Decaf Flat White — кофейный напиток, в котором эспрессо без кофеина сочетается с тёплым молоком, взбитым до лёгкой бархатистой пены">
+            </picture>
+            <p class="slider__text-new">новинка!</p>
+            <p class="slider-card__description">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
+          </div>
+          <div class="slider-price">
+            <span class="slider-price__old">295&#8381;</span>
+            <span class="slider-price__new">225&#8381;</span>
+            <button class="button slider-price__button">Заказать</button>
+          </div>
+          <button class="slider__button slider__button__right"></button>
+        </div>
+      </section>
     </main>
   </body>
 </html>
