--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@
   </head>
    <body class="page__body">
     <header class="header">
-      <nav class="header__nav main-nav main-nav--is-close">
+      <nav class="header__nav main-nav main-nav--is-close"> <!--main-nav--is-close is-open-->
         <a class="logo header__logo" href="index.html" aria-current="page">
           <span class="visually-hidden">На главную страницу</span>
           <picture>
