--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@
   </head>
    <body class="page__body">
     <header class="header">
-      <nav class="header__nav main-nav main-nav--is-close"> <!--main-nav--is-close is-open-->
+      <nav class="header__nav main-nav main-nav--is-close"> <!--is-close is-open-->
         <a class="logo header__logo" href="index.html" aria-current="page">
           <span class="visually-hidden">На главную страницу</span>
           <picture>
@@ -42,8 +42,8 @@
       <h1 class="visually-hidden">Интернет-магазин кофейных напитков</h1>
       <section class="slider">
         <h2 class="visually-hidden">Слайдер.Новинки</h2>
+        <button class="slider__button slider__arrow-left"></button>
         <div class="container slider__container">
-          <button class="slider__button slider__button__left"></button>
           <div class="slider-card slider__element">
             <h3 class="slider-card__title">Декаф Флэт Уайт</h3>
             <picture>
@@ -51,16 +51,18 @@
               <source type="image/svg+xml" width="476" height="476" media="(min-width: 768px)" srcset="#">
               <img class="slider__card-image" width="280" height="280" src="images/flat-white-img-mobile@1x.png" srcset="images/flat-white-img-mobile@1x.webp, images/flat-white-img-mobile@2x.webp 2x" alt="Decaf Flat White — кофейный напиток, в котором эспрессо без кофеина сочетается с тёплым молоком, взбитым до лёгкой бархатистой пены">
             </picture>
-            <p class="slider__text-new">новинка!</p>
+            <p class="slider-card__new">новинка!</p>
             <p class="slider-card__description">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
           </div>
           <div class="slider-price">
-            <span class="slider-price__old">295&#8381;</span>
-            <span class="slider-price__new">225&#8381;</span>
+            <ul class="slider-price__list">
+              <li class="slider-price__old">295&#8381;</li>
+              <li class="slider-price__new">225&#8381;</li>
+            </ul>
             <button class="button slider-price__button">Заказать</button>
           </div>
-          <button class="slider__button slider__button__right"></button>
         </div>
+        <button class="slider__button slider__arrow-right"></button>
       </section>
     </main>
   </body>
