--- a/source/index.html
+++ b/source/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="styles/styles.css">
     <script src="scripts/index.js" defer></script>
   </head>
-   <body class="page__body">
+  <body class="page__body">
     <header class="header">
-      <nav class="header__nav main-nav main-nav--is-close"> <!--is-close is-open-->
+      <nav class="header__nav main-nav main-nav--is-close"><!-- is-close is-open -->
         <a class="logo header__logo" href="index.html" aria-current="page">
           <span class="visually-hidden">На главную страницу</span>
           <picture>
@@ -42,7 +42,7 @@
       <h1 class="visually-hidden">Интернет-магазин кофейных напитков</h1>
       <section class="slider">
         <h2 class="visually-hidden">Слайдер.Новинки</h2>
-        <button class="slider__button slider__arrow-left"></button>
+        <button class="slider__button slider__arrow-left" type="button" aria-label="Листать в право"></button>
         <div class="container slider__container">
           <div class="slider-card slider__element">
             <h3 class="slider-card__title">Декаф Флэт Уайт</h3>
@@ -59,10 +59,10 @@
               <li class="slider-price__old">295&#8381;</li>
               <li class="slider-price__new">225&#8381;</li>
             </ul>
-            <button class="button slider-price__button">Заказать</button>
+            <button class="button slider-price__button" type="button">Заказать</button>
           </div>
         </div>
-        <button class="slider__button slider__arrow-right"></button>
+        <button class="slider__button slider__arrow-right" type="button" aria-label="Листать в лево"></button>
       </section>
     </main>
   </body>
