Добавляет html для блока advantages

--- a/source/index.html
+++ b/source/index.html
@@ -64,6 +64,30 @@
         </div>
         <button class="slider__button slider__arrow-right" type="button" aria-label="Листать в лево"></button>
       </section>
+      <section class="advantages">
+        <div class="container advantages__container">
+          <h2 class="advantages__title">Преимущества</h2>
+          <p class="advantages__text">Главные причины выбрать Drink2Go</p>
+          <ul class="advantages-list">
+            <li class="advantages-list__item advantages-list__item--">
+              <h3 class="advantages-list__item-title">Скорость</h3>
+              <p class="advantages-list__item-text">Готовый напиток всегда под рукой — просто открой банку</p>
+            </li>
+            <li class="advantages-list__item advantages-list__item--">
+              <h3 class="advantages-list__item-title">Удобство</h3>
+              <p class="advantages-list__item-text">Легко помещается и в карман, и в маленькую сумочку</p>
+            </li>
+            <li class="advantages-list__item advantages-list__item--">
+              <h3 class="advantages-list__item-title">Бодрость</h3>
+              <p class="advantages-list__item-text">Сбалансированная доза кофеина даст мощный заряд энергии</p>
+            </li>
+            <li class="advantages-list__item advantages-list__item--">
+              <h3 class="advantages-list__item-title">Экологичность</h3>
+              <p class="advantages-list__item-text">Вся упаковка сделана из перерабатываемых материалов</p>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
   </body>
 </html>
