--- a/source/index.html
+++ b/source/index.html
@@ -69,21 +69,21 @@
           <h2 class="advantages__title">Преимущества</h2>
           <p class="advantages__text">Главные причины выбрать Drink2Go</p>
           <ul class="advantages-list">
-            <li class="advantages-list__item advantages-list__item--">
+            <li class="advantages-list__item advantages-list__item--speed">
               <h3 class="advantages-list__item-title">Скорость</h3>
               <p class="advantages-list__item-text">Готовый напиток всегда под рукой — просто открой банку</p>
             </li>
-            <li class="advantages-list__item advantages-list__item--">
+            <li class="advantages-list__item advantages-list__item--comfort">
               <h3 class="advantages-list__item-title">Удобство</h3>
-              <p class="advantages-list__item-text">Легко помещается и в карман, и в маленькую сумочку</p>
+              <p class="advantages-list__item-text">Легко помещается и в карман,<br> и в маленькую сумочку</p>
             </li>
-            <li class="advantages-list__item advantages-list__item--">
+            <li class="advantages-list__item advantages-list__item--cheerfulness">
               <h3 class="advantages-list__item-title">Бодрость</h3>
               <p class="advantages-list__item-text">Сбалансированная доза кофеина даст мощный заряд энергии</p>
             </li>
-            <li class="advantages-list__item advantages-list__item--">
+            <li class="advantages-list__item advantages-list__item--ecology">
               <h3 class="advantages-list__item-title">Экологичность</h3>
-              <p class="advantages-list__item-text">Вся упаковка сделана из перерабатываемых материалов</p>
+              <p class="advantages-list__item-text">Вся упаковка сделана<br>из перерабатываемых материалов</p>
             </li>
           </ul>
         </div>
