Подключает index.js

--- a/source/index.html
+++ b/source/index.html
@@ -96,6 +96,7 @@
             <fieldset class="filter-price">
             <legend class="filter-price__legend">Цена, ₽ :</legend>
               <div class="filter-price__range">
+                <div id="slider filter-price__slider"></div>
                 <input class="filter-price__range" type="number" name="price-min" id="range-from" placeholder="0">
                 <label class="filter-price__from" for="range-from"></label>
                 <input class="filter-price__range" name="price-max" id="range-to" placeholder="900">
@@ -120,5 +121,6 @@
         </div>
       </section>
     </main>
+    <script src="./scripts/index.js" type="module"></script>
   </body>
 </html>
