--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,6 @@
     <link rel="preload" href="fonts/Montserrat-Regular.woff" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="preload" href="fonts/Montserrat-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/styles.css">
-    <script src="scripts/index.js" defer></script>
   </head>
   <body class="page__body">
     <header class="header">
@@ -93,35 +92,38 @@
         <div class="container catalog__container">
           <h2 class="catalog__title">Каталог</h2>
           <p class="catalog__text">Каталог кофейных напитков</p>
-          <form class="filter catalog__filter">
+          <form class="filter catalog__filter" action="https://echo.htmlacademy.ru">
             <fieldset class="filter-price">
             <legend class="filter-price__legend">Цена, ₽ :</legend>
-              <div class="filter-price__range">
-                <div id="slider filter-price__slider"></div>
-                <input class="filter-price__range" type="number" name="price-min" id="range-from" placeholder="0">
-                <label class="filter-price__from" for="range-from"></label>
-                <input class="filter-price__range" name="price-max" id="range-to" placeholder="900">
-                <label class="filter-price__to" for="range-to"></label>
+              <div class="filter__range">
+                <div class="filter-price__range"></div>
+                <label class="filter-price__from" for="range-from">
+                  <input class="filter-price__range" type="number" name="price-min" id="range-from" placeholder="0">
+                </label>
+                <label class="filter-price__to" for="range-to">
+                  <input class="filter-price__range" name="price-max" id="range-to" placeholder="900">
+                </label>
               </div>
             </fieldset>
             <fieldset class="filter-additive">
               <legend>Наличие молока</legend>
-              <label class="filter-additive__label">Неважно</label>
-              <input class="filter-additive__radio" type="radio" name="additive" value="any">
+              <label class="filter-additive__label" for="additive">Неважно</label>
+              <input class="filter-additive__radio" type="radio" name="additive" value="any" id="additive">
 
-              <label class="filter-additive__label">Только животное</label>
-              <input class="filter-additive__radio" type="radio" name="additive" value="animal">
+              <label class="filter-additive__label" for="animal">Только животное</label>
+              <input class="filter-additive__radio" type="radio" name="additive" value="animal" id="animal">
 
-              <label class="filter-additive__label">Только растительное</label>
-              <input class="filter-additive__radio" type="radio" name="additive" value="vegetable">
+              <label class="filter-additive__label" for="vegetable">Только растительное</label>
+              <input class="filter-additive__radio" type="radio" name="additive" value="vegetable" id="vegetable">
 
-              <label class="filter-additive__label">Без молока</label>
-              <input class="filter-additive__radio" type="radio" name="additive" value="without">
+              <label class="filter-additive__label" for="without">Без молока</label>
+              <input class="filter-additive__radio" type="radio" name="additive" value="without" id="without">
             </fieldset>
           </form>
         </div>
       </section>
     </main>
+    <script src="./vendor/nouislider.min.js" type="module"></script>
     <script src="./scripts/index.js" type="module"></script>
   </body>
 </html>
