Добавляет функцию для работы слайдера диапазона

--- a/source/index.html
+++ b/source/index.html
@@ -93,15 +93,15 @@
           <h2 class="catalog__title">Каталог</h2>
           <p class="catalog__text">Каталог кофейных напитков</p>
           <form class="filter catalog__filter" action="https://echo.htmlacademy.ru">
-            <fieldset class="filter-price">
-            <legend class="filter-price__legend">Цена, ₽ :</legend>
+            <fieldset class="filter__price">
+            <legend class="filter__price-legend">Цена, ₽ :</legend>
               <div class="filter__range">
-                <div class="filter-price__range"></div>
-                <label class="filter-price__from" for="range-from">
-                  <input class="filter-price__range" type="number" name="price-min" id="range-from" placeholder="0">
+                <div class="filter__range-scale"></div>
+                <label class="filter-price__from" for="min-num">
+                  <input class="filter-price__range" type="number" name="price-min" id="min-num" placeholder="0">
                 </label>
-                <label class="filter-price__to" for="range-to">
-                  <input class="filter-price__range" name="price-max" id="range-to" placeholder="900">
+                <label class="filter-price__to" for="max-num">
+                  <input class="filter-price__range" name="price-max" id="max-num" placeholder="900">
                 </label>
               </div>
             </fieldset>
