Добавляет вёрстку одного переключателся в блоке switch-country

--- a/source/index.html
+++ b/source/index.html
@@ -119,6 +119,12 @@
               <label class="filter-additive__label" for="without">Без молока</label>
               <input class="filter-additive__radio" type="radio" name="additive" value="without" id="without">
             </fieldset>
+            <fieldset class="filter__switch-country switch-country">
+              <label class="switch-country__label">Бразилия
+                <input class="switch-country__input" type="checkbox">
+                <span class="toggle"></span>
+              </label>
+            </fieldset>
           </form>
         </div>
       </section>
