Заканчивает стили элемента filter__additive

--- a/source/index.html
+++ b/source/index.html
@@ -107,7 +107,7 @@
               </div>
             </fieldset>
             <fieldset class="filter__additive">
-              <legend>Наличие молока</legend>
+              <legend class="filter__additive-legend">Наличие молока</legend>
               <ul class="filter__additive-list">
                 <li class="filter__additive-item">
                   <input class="filter__additive-radio" type="radio" name="additive" value="any" id="additive" checked>
