Добавляет стили для элемента filter__country

--- a/source/index.html
+++ b/source/index.html
@@ -127,33 +127,33 @@
                 </li>
               </ul>
             </fieldset>
-            <fieldset class="switch-country">
-              <legend class="filter__switch-country">Страна произрастания</legend>
-              <ul class="switch-country__list">
-                <li class="switch-country__item">
-                    <input class="switch-country__input" id="brazil" name="brazil" type="checkbox">
-                    <label class="switch-country__label" for="brazil"></label>
-                    <span class="switch-country__name">Бразилия</span>
+            <fieldset class="filter__country">
+              <legend class="filter__country-legend">Страна произрастания</legend>
+              <ul class="filter__country-list">
+                <li class="filter__country-item">
+                    <input class="filter__country-input" id="brazil" name="brazil" type="checkbox" checked>
+                    <label class="filter__country-label" for="brazil"></label>
+                    <span class="filter__country-name">Бразилия</span>
                 </li>
-                <li class="switch-country__item">
-                    <input class="switch-country__input" id="ethiopia" name="ethiopia" type="checkbox">
-                    <label class="switch-country__label" for="ethiopia"></label>
-                    <span class="switch-country__name">Эфиопии</span>
+                <li class="filter__country-item">
+                    <input class="filter__country-input" id="ethiopia" name="ethiopia" type="checkbox">
+                    <label class="filter__country-label" for="ethiopia"></label>
+                    <span class="filter__country-name">Эфиопии</span>
                 </li>
-                <li class="switch-country__item">
-                    <input class="switch-country__input" id="colombia" name="colombia" type="checkbox">
-                    <label class="switch-country__label" for="colombia"></label>
-                    <span class="switch-country__name">Колумбия</span>
+                <li class="filter__country-item">
+                    <input class="filter__country-input" id="colombia" name="colombia" type="checkbox">
+                    <label class="filter__country-label" for="colombia"></label>
+                    <span class="filter__country-name">Колумбия</span>
                 </li>
-                <li class="switch-country__item">
-                    <input class="switch-country__input" id="cost-rica" name="cost-rica" type="checkbox">
-                    <label class="switch-country__label" for="cost-rica"></label>
-                    <span class="switch-country__name">Коста-Рика</span>
+                <li class="filter__country-item">
+                    <input class="filter__country-input" id="cost-rica" name="cost-rica" type="checkbox">
+                    <label class="filter__country-label" for="cost-rica"></label>
+                    <span class="filter__country-name">Коста-Рика</span>
                 </li>
-                <li class="switch-country__item">
-                    <input class="switch-country__input" id="peru" name="peru" type="checkbox">
-                    <label class="switch-country__label" for="peru"></label>
-                    <span class="switch-country__name">Перу</span>
+                <li class="filter__country-item">
+                    <input class="filter__country-input" id="peru" name="peru" type="checkbox">
+                    <label class="filter__country-label" for="peru"></label>
+                    <span class="filter__country-name">Перу</span>
                 </li>
               </ul>
             </fieldset>
