Добавляет стили блоку кнопок в элементе filter__country

--- a/source/index.html
+++ b/source/index.html
@@ -157,9 +157,9 @@
                 </li>
               </ul>
             </fieldset>
-            <div class="filter__button-wrapper">
-              <button class="button" type="submit">Применить</button>
-              <button class="button" type="reset">Сбросить</button>
+            <div class="filter__country-submit">
+              <button class="button filter__country-button" type="submit">Применить</button>
+              <button class="button filter__country-button" type="reset">Сбросить</button>
             </div>
           </form>
         </div>
