--- a/source/index.html
+++ b/source/index.html
@@ -164,6 +164,30 @@
           </form>
         </div>
       </section>
+      <section class="sorting">
+        <div class="container sorting__container">
+          <h2 class="visually-hidden">Найдено по запросу</h2>
+          <label for="sorting" class="sorting__label">Сортировка:</label>
+          <select name="sorting" id="sorting" class="sorting__select">
+            <option value="default" class="sorting__option">По умолчанию</option>
+          </select>
+          <div class="sorting__poduct-card">
+            <article class="poduct-card">
+              <h3 class="poduct-card__title">Декаф Флэт Уайт</h3>
+              <p class="poduct-card__about">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
+              <span class="poduct-card__price">225₽</span>
+              <button class="poduct-card__add-to-cart" type="button">В корзину</button>
+              <picture>
+                <source type="image/webp" width="130" height="188" media="(min-width: 1440px)" srcset="images/coffee-can-1@1x.webp, images/coffee-can-1@2x.webp 2x">
+                <source type="image/png" width="130" height="188" media="(min-width: 1440px)" srcset="images/coffee-can-1@1x.png, images/coffee-can-1@2x.png 2x">
+                <source type="image/webp" width="130" height="188" media="(min-width: 768px)" srcset="images/coffee-can-1@1x.webp, images/coffee-can-1@2x.webp 2x">
+                <source type="image/png" width="130" height="188" media="(min-width: 768px)" srcset="images/coffee-can-1@1x.png, images/coffee-can-1@2x.png 2x">
+                <img class="poduct-card__image" width="130" height="188" src="images/coffee-can-1@1x.png" srcset="images/coffee-can-1@2x.png 2x" alt="Декаф Флэт Уайт.Кофе без кофеина из Эфиопии с натуральным фермерским молоком">
+              </picture>
+            </article>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="./vendor/nouislider.min.js" type="module"></script>
     <script src="./scripts/index.js" type="module"></script>
