--- a/source/index.html
+++ b/source/index.html
@@ -162,32 +162,38 @@
               <button class="button filter__country-button" type="reset">Сбросить</button>
             </div>
           </form>
-        </div>
-      </section>
-      <section class="sorting">
-        <div class="container sorting__container">
-          <h2 class="visually-hidden">Найдено по запросу</h2>
-          <label for="sorting" class="sorting__label">Сортировка:</label>
-          <select name="sorting" id="sorting" class="sorting__select">
-            <option value="default" class="sorting__option">По умолчанию</option>
-          </select>
-          <div class="sorting__poduct-card">
-            <article class="poduct-card">
-              <h3 class="poduct-card__title">Декаф Флэт Уайт</h3>
-              <p class="poduct-card__about">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
-              <span class="poduct-card__price">225₽</span>
-              <button class="poduct-card__add-to-cart" type="button">В корзину</button>
-              <picture>
-                <source type="image/webp" width="130" height="188" media="(min-width: 1440px)" srcset="images/coffee-can-1@1x.webp, images/coffee-can-1@2x.webp 2x">
-                <source type="image/png" width="130" height="188" media="(min-width: 1440px)" srcset="images/coffee-can-1@1x.png, images/coffee-can-1@2x.png 2x">
-                <source type="image/webp" width="130" height="188" media="(min-width: 768px)" srcset="images/coffee-can-1@1x.webp, images/coffee-can-1@2x.webp 2x">
-                <source type="image/png" width="130" height="188" media="(min-width: 768px)" srcset="images/coffee-can-1@1x.png, images/coffee-can-1@2x.png 2x">
-                <img class="poduct-card__image" width="130" height="188" src="images/coffee-can-1@1x.png" srcset="images/coffee-can-1@2x.png 2x" alt="Декаф Флэт Уайт.Кофе без кофеина из Эфиопии с натуральным фермерским молоком">
-              </picture>
-            </article>
+          <div class="sorting">
+            <label class="sorting__label" for="sorting">Сортировка:</label>
+            <select class="sorting__select" name="sorting" id="sorting">
+              <option class="sorting__option" value="default">По умолчанию</option>
+            </select>
           </div>
+          <ul class="catalog__list">
+            <li class="catalog__list-item">
+              <article class="poduct-card">
+                <h3 class="poduct-card__title">Декаф Флэт Уайт</h3>
+                <p class="poduct-card__about">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
+                <span class="poduct-card__price">225₽</span>
+                <button class="poduct-card__add-to-cart" type="button">В корзину</button>
+                <picture>
+                  <source type="image/webp" width="130" height="188" media="(min-width: 1440px)" srcset="images/coffee-can-1@1x.webp, images/coffee-can-1@2x.webp 2x">
+                  <source type="image/png" width="130" height="188" media="(min-width: 1440px)" srcset="images/coffee-can-1@1x.png, images/coffee-can-1@2x.png 2x">
+                  <source type="image/webp" width="130" height="188" media="(min-width: 768px)" srcset="images/coffee-can-1@1x.webp, images/coffee-can-1@2x.webp 2x">
+                  <source type="image/png" width="130" height="188" media="(min-width: 768px)" srcset="images/coffee-can-1@1x.png, images/coffee-can-1@2x.png 2x">
+                  <img class="poduct-card__image" width="130" height="188" src="images/coffee-can-1@1x.png" srcset="images/coffee-can-1@2x.png 2x" alt="Декаф Флэт Уайт.Кофе без кофеина из Эфиопии с натуральным фермерским молоком">
+                </picture>
+              </article>
+            </li>
+          </ul>
         </div>
       </section>
+      <ul class="pagination">
+        <li class="pagination__item"><a class="pagination__link" href="#" aria-label="Назад"></a></li>
+        <li class="pagination__item"><a class="pagination__link" href="#">1</a></li>
+        <li class="pagination__item"><a class="pagination__link pagination__link--current" href="#">2</a></li>
+        <li class="pagination__item"><a class="pagination__link" href="#">3</a></li>
+        <li class="pagination__item"><a class="pagination__link" href="#" aria-label="Вперёд"></a></li>
+      </ul>
     </main>
     <script src="./vendor/nouislider.min.js" type="module"></script>
     <script src="./scripts/index.js" type="module"></script>
