Подставляет карточкам товара изображения по соответсвию.

--- a/source/index.html
+++ b/source/index.html
@@ -184,6 +184,81 @@
                 </picture>
               </article>
             </li>
+            <li class="catalog__list-item">
+              <article class="poduct-card">
+                <h3 class="poduct-card__title">Декаф Флэт Уайт</h3>
+                <p class="poduct-card__about">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
+                <span class="poduct-card__price">225₽</span>
+                <button class="poduct-card__add-to-basket" type="button">В корзину</button>
+                <picture>
+                  <source type="image/webp" width="130" height="188" media="(min-width: 1440px)" srcset="images/coffee-can-2@1x.webp, images/coffee-can-2@2x.webp 2x">
+                  <source type="image/png" width="130" height="188" media="(min-width: 1440px)" srcset="images/coffee-can-2@1x.png, images/coffee-can-2@2x.png 2x">
+                  <source type="image/webp" width="130" height="188" media="(min-width: 768px)" srcset="images/coffee-can-2@1x.webp, images/coffee-can-2@2x.webp 2x">
+                  <source type="image/png" width="130" height="188" media="(min-width: 768px)" srcset="images/coffee-can-2@1x.png, images/coffee-can-2@2x.png 2x">
+                  <img class="poduct-card__image" width="130" height="188" src="images/coffee-can-2@1x.png" srcset="images/coffee-can-2@2x.png 2x" alt="Декаф Флэт Уайт.Кофе без кофеина из Эфиопии с натуральным фермерским молоком">
+                </picture>
+              </article>
+            </li>
+            <li class="catalog__list-item">
+              <article class="poduct-card">
+                <h3 class="poduct-card__title">Декаф Флэт Уайт</h3>
+                <p class="poduct-card__about">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
+                <span class="poduct-card__price">225₽</span>
+                <button class="poduct-card__add-to-basket" type="button">В корзину</button>
+                <picture>
+                  <source type="image/webp" width="130" height="188" media="(min-width: 1440px)" srcset="images/coffee-can-3@1x.webp, images/coffee-can-3@2x.webp 2x">
+                  <source type="image/png" width="130" height="188" media="(min-width: 1440px)" srcset="images/coffee-can-3@1x.png, images/coffee-can-3@2x.png 2x">
+                  <source type="image/webp" width="130" height="188" media="(min-width: 768px)" srcset="images/coffee-can-3@1x.webp, images/coffee-can-3@2x.webp 2x">
+                  <source type="image/png" width="130" height="188" media="(min-width: 768px)" srcset="images/coffee-can-3@1x.png, images/coffee-can-3@2x.png 2x">
+                  <img class="poduct-card__image" width="130" height="188" src="images/coffee-can-3@1x.png" srcset="images/coffee-can-3@2x.png 2x" alt="Декаф Флэт Уайт.Кофе без кофеина из Эфиопии с натуральным фермерским молоком">
+                </picture>
+              </article>
+            </li>
+            <li class="catalog__list-item">
+              <article class="poduct-card">
+                <h3 class="poduct-card__title">Декаф Флэт Уайт</h3>
+                <p class="poduct-card__about">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
+                <span class="poduct-card__price">225₽</span>
+                <button class="poduct-card__add-to-basket" type="button">В корзину</button>
+                <picture>
+                  <source type="image/webp" width="130" height="188" media="(min-width: 1440px)" srcset="images/coffee-can-4@1x.webp, images/coffee-can-4@2x.webp 2x">
+                  <source type="image/png" width="130" height="188" media="(min-width: 1440px)" srcset="images/coffee-can-4@1x.png, images/coffee-can-4@2x.png 2x">
+                  <source type="image/webp" width="130" height="188" media="(min-width: 768px)" srcset="images/coffee-can-4@1x.webp, images/coffee-can-4@2x.webp 2x">
+                  <source type="image/png" width="130" height="188" media="(min-width: 768px)" srcset="images/coffee-can-4@1x.png, images/coffee-can-4@2x.png 2x">
+                  <img class="poduct-card__image" width="130" height="188" src="images/coffee-can-4@1x.png" srcset="images/coffee-can-4@2x.png 2x" alt="Декаф Флэт Уайт.Кофе без кофеина из Эфиопии с натуральным фермерским молоком">
+                </picture>
+              </article>
+            </li>
+            <li class="catalog__list-item">
+              <article class="poduct-card">
+                <h3 class="poduct-card__title">Декаф Флэт Уайт</h3>
+                <p class="poduct-card__about">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
+                <span class="poduct-card__price">225₽</span>
+                <button class="poduct-card__add-to-basket" type="button">В корзину</button>
+                <picture>
+                  <source type="image/webp" width="130" height="188" media="(min-width: 1440px)" srcset="images/coffee-can-5@1x.webp, images/coffee-can-5@2x.webp 2x">
+                  <source type="image/png" width="130" height="188" media="(min-width: 1440px)" srcset="images/coffee-can-5@1x.png, images/coffee-can-5@2x.png 2x">
+                  <source type="image/webp" width="130" height="188" media="(min-width: 768px)" srcset="images/coffee-can-5@1x.webp, images/coffee-can-5@2x.webp 2x">
+                  <source type="image/png" width="130" height="188" media="(min-width: 768px)" srcset="images/coffee-can-5@1x.png, images/coffee-can-5@2x.png 2x">
+                  <img class="poduct-card__image" width="130" height="188" src="images/coffee-can-5@1x.png" srcset="images/coffee-can-5@2x.png 2x" alt="Декаф Флэт Уайт.Кофе без кофеина из Эфиопии с натуральным фермерским молоком">
+                </picture>
+              </article>
+            </li>
+            <li class="catalog__list-item">
+              <article class="poduct-card">
+                <h3 class="poduct-card__title">Декаф Флэт Уайт</h3>
+                <p class="poduct-card__about">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
+                <span class="poduct-card__price">225₽</span>
+                <button class="poduct-card__add-to-basket" type="button">В корзину</button>
+                <picture>
+                  <source type="image/webp" width="130" height="188" media="(min-width: 1440px)" srcset="images/coffee-can-6@1x.webp, images/coffee-can-6@2x.webp 2x">
+                  <source type="image/png" width="130" height="188" media="(min-width: 1440px)" srcset="images/coffee-can-6@1x.png, images/coffee-can-6@2x.png 2x">
+                  <source type="image/webp" width="130" height="188" media="(min-width: 768px)" srcset="images/coffee-can-6@1x.webp, images/coffee-can-6@2x.webp 2x">
+                  <source type="image/png" width="130" height="188" media="(min-width: 768px)" srcset="images/coffee-can-6@1x.png, images/coffee-can-6@2x.png 2x">
+                  <img class="poduct-card__image" width="130" height="188" src="images/coffee-can-6@1x.png" srcset="images/coffee-can-6@2x.png 2x" alt="Декаф Флэт Уайт.Кофе без кофеина из Эфиопии с натуральным фермерским молоком">
+                </picture>
+              </article>
+            </li>
           </ul>
         </div>
       </section>
