--- a/source/index.html
+++ b/source/index.html
@@ -270,6 +270,32 @@
         </div>
       </section>
     </main>
+    <footer class="footer">
+      <div class="footer__map">
+        <picture>
+          <source type="image/webp" width="1440" height="540" media="(min-width: 1440px)" srcset="images/map-desktop@1x.webp, images/map-desktop@2x.webp 2x">
+          <source type="image/jpg" width="1440" height="540" media="(min-width: 1440px)" srcset="images/map-desktop@1x.jpg, images/map-desktop@2x.jpg 2x">
+          <source type="image/webp" width="768" height="480" media="(min-width: 768px)" srcset="images/map-tablet@1x.webp, images/map-tablet@2x.webp 2x">
+          <source type="image/jpg" width="768" height="480" media="(min-width: 768px)" srcset="images/map-tablet@1x.jpg, images/map-tablet@2x.jpg 2x">
+          <img class="footer__map-image" width="320" height="420" src="images/map-mobile@1x.jpg" srcset="images/map-mobile@1x.webp, images/map-mobile@2x.webp 2x" alt="Адрес на карте">
+        </picture>
+      </div>
+      <div class="container">
+        <h2>Интернет-магазин</h2>
+        <ul class="footer-nav__list">
+          <li class="footer-nav__item"><a class="footer-nav__link" href="catalog.html">Каталог</a></li>
+          <li class="footer-nav__item"><a class="footer-nav__link" href="#">Доставка</a></li>
+          <li class="footer-nav__item"><a class="footer-nav__link" href="#">Способы оплаты</a></li>
+          <li class="footer-nav__item"><a class="footer-nav__link" href="#">О нас</a></li>
+        </ul>
+        <h2>Медиа</h2>
+        <ul class="footer-media__list">
+          <li class="footer-media__item"><a class="footer-media__link" href="№">Блог</a></li>
+          <li class="footer-media__item"><a class="footer-media__link" href="#">Информация для сми</a></li>
+          <li class="footer-media__item"><a class="footer-media__link" href="#">Правовая информация</a></li>
+        </ul>
+      </div>
+    </footer>
     <script src="./vendor/nouislider.min.js" type="module"></script>
     <script src="./scripts/index.js" type="module"></script>
   </body>
