--- a/source/index.html
+++ b/source/index.html
@@ -273,28 +273,41 @@
     <footer class="footer">
       <div class="footer__map">
         <picture>
-          <source type="image/webp" width="1440" height="540" media="(min-width: 1440px)" srcset="images/map-desktop@1x.webp, images/map-desktop@2x.webp 2x">
-          <source type="image/jpg" width="1440" height="540" media="(min-width: 1440px)" srcset="images/map-desktop@1x.jpg, images/map-desktop@2x.jpg 2x">
+          <source type="image/webp" width="1440" height="540" media="(min-width: 1440px)" srcset="images/map-desktop@1x.webp 1x, images/map-desktop@2x.webp 2x">
+          <source type="image/jpg" width="1440" height="540" media="(min-width: 1440px)" srcset="images/map-desktop@1x.jpg 1x, images/map-desktop@2x.jpg 2x">
           <source type="image/webp" width="768" height="480" media="(min-width: 768px)" srcset="images/map-tablet@1x.webp, images/map-tablet@2x.webp 2x">
-          <source type="image/jpg" width="768" height="480" media="(min-width: 768px)" srcset="images/map-tablet@1x.jpg, images/map-tablet@2x.jpg 2x">
-          <img class="footer__map-image" width="320" height="420" src="images/map-mobile@1x.jpg" srcset="images/map-mobile@1x.webp, images/map-mobile@2x.webp 2x" alt="Адрес на карте">
+          <source type="image/jpg" width="768" height="480" media="(min-width: 768px)" srcset="images/map-tablet@1x.jpg 1x, images/map-tablet@2x.jpg 2x">
+          <img class="footer__map-image" width="320" height="420" src="images/map-mobile@1x.jpg" srcset="images/map-mobile@1x.webp 1x, images/map-mobile@2x.webp 2x" alt="Адрес на карте. Город Санкт-Петербург, набережная реки Карповки, дом 5">
         </picture>
       </div>
-      <div class="container">
-        <h2>Интернет-магазин</h2>
-        <ul class="footer-nav__list">
-          <li class="footer-nav__item"><a class="footer-nav__link" href="catalog.html">Каталог</a></li>
-          <li class="footer-nav__item"><a class="footer-nav__link" href="#">Доставка</a></li>
-          <li class="footer-nav__item"><a class="footer-nav__link" href="#">Способы оплаты</a></li>
-          <li class="footer-nav__item"><a class="footer-nav__link" href="#">О нас</a></li>
-        </ul>
-        <h2>Медиа</h2>
-        <ul class="footer-media__list">
-          <li class="footer-media__item"><a class="footer-media__link" href="№">Блог</a></li>
-          <li class="footer-media__item"><a class="footer-media__link" href="#">Информация для сми</a></li>
-          <li class="footer-media__item"><a class="footer-media__link" href="#">Правовая информация</a></li>
-        </ul>
-      </div>
+      <nav class="footer__nav footer-nav">
+        <div class="container">
+          <h3>Интернет-магазин</h3>
+          <ul class="footer-nav__list">
+            <li class="footer-nav__item"><a class="footer-nav__link" href="catalog.html">Каталог</a></li>
+            <li class="footer-nav__item"><a class="footer-nav__link" href="#">Доставка</a></li>
+            <li class="footer-nav__item"><a class="footer-nav__link" href="#">Способы оплаты</a></li>
+            <li class="footer-nav__item"><a class="footer-nav__link" href="#">О нас</a></li>
+          </ul>
+          <h3>Медиа</h3>
+          <ul class="footer-nav__media-list">
+            <li class="footer-nav__media-item"><a class="footer-nav__media-link" href="№">Блог</a></li>
+            <li class="footer-nav__media-item"><a class="footer-nav__media-link" href="#">Информация для сми</a></li>
+            <li class="footer-nav__media-item"><a class="footer-nav__media-link" href="#">Правовая информация</a></li>
+          </ul>
+          <section class="footer__contacts contacts">
+            <h2 class="footer__contacts-title contacts__title">Контакты</h2>
+            <address class="footer__contacts-address contacts__address">
+              <span class="contacts__icon">📍</span>Санкт-Петербург, набережная реки Карповки, дом 5
+            </address>
+            <p class="footer__contacts-phone contacts__phone">
+              <span class="contacts__icon">📞</span>
+              <a href="tel:+79999999999">+7 (999) 999-99-99</a>
+            </p>
+          </section>
+          <p class="footer__developer">Разработано в HTML Academy</p>
+        </div>
+      </nav>
     </footer>
     <script src="./vendor/nouislider.min.js" type="module"></script>
     <script src="./scripts/index.js" type="module"></script>
