Добавляет блок соц. сетей в футер

--- a/source/index.html
+++ b/source/index.html
@@ -282,6 +282,25 @@
       </div>
       <nav class="footer__nav footer-nav">
         <div class="container">
+          <div class="social">
+            <a class="logo social__logo" href="index.html" aria-current="page">
+              <span class="visually-hidden">На главную страницу</span>
+              <picture>
+                <source type="image/svg+xml" width="170" height="36" media="(min-width: 1440px)" srcset="images/images/logo-drink2go-medium.svg">
+                <source type="image/svg+xml" width="82" height="36" media="(min-width: 768px)" srcset="images/images/logo-drink2go-medium.svg">
+                <img class="logo__image" width="82" height="36" src="images/logo-drink2go-medium.svg" alt="Логотип магазина. Двойка в фиолетовом круге">
+              </picture>
+            </a>
+            <a class="social__vk" href="#">
+              <span class="visually-hidden">Войти в личный кабинет</span>
+            </a>
+            <a class="social__pinterest" href="#">
+              <span class="visually-hidden">Корзина</span>
+            </a>
+             <a class="social__ok" href="#">
+              <span class="visually-hidden">Корзина</span>
+            </a>
+          </div>
           <h3>Интернет-магазин</h3>
           <ul class="footer-nav__list">
             <li class="footer-nav__item"><a class="footer-nav__link" href="catalog.html">Каталог</a></li>
