--- a/source/index.html
+++ b/source/index.html
@@ -282,7 +282,7 @@
       </div>
       <nav class="footer__nav footer-nav">
         <div class="container">
-          <div class="social">
+          <div class="social footer__social">
             <a class="logo social__logo" href="index.html" aria-current="page">
               <span class="visually-hidden">На главную страницу</span>
               <picture>
@@ -301,29 +301,24 @@
               <span class="visually-hidden">Корзина</span>
             </a>
           </div>
-          <h3>Интернет-магазин</h3>
+          <h3 class="footer-nav__title">Интернет-магазин</h3>
           <ul class="footer-nav__list">
             <li class="footer-nav__item"><a class="footer-nav__link" href="catalog.html">Каталог</a></li>
             <li class="footer-nav__item"><a class="footer-nav__link" href="#">Доставка</a></li>
             <li class="footer-nav__item"><a class="footer-nav__link" href="#">Способы оплаты</a></li>
             <li class="footer-nav__item"><a class="footer-nav__link" href="#">О нас</a></li>
           </ul>
-          <h3>Медиа</h3>
-          <ul class="footer-nav__media-list">
-            <li class="footer-nav__media-item"><a class="footer-nav__media-link" href="№">Блог</a></li>
-            <li class="footer-nav__media-item"><a class="footer-nav__media-link" href="#">Информация для сми</a></li>
-            <li class="footer-nav__media-item"><a class="footer-nav__media-link" href="#">Правовая информация</a></li>
+          <h3 class="footer-nav__title">Медиа</h3>
+          <ul class="footer-nav__list">
+            <li class="footer-nav__item"><a class="footer-nav__link" href="№">Блог</a></li>
+            <li class="footer-nav__item"><a class="footer-nav__link" href="#">Информация для сми</a></li>
+            <li class="footer-nav__item"><a class="footer-nav__link" href="#">Правовая информация</a></li>
           </ul>
-          <section class="footer__contacts contacts">
-            <h2 class="footer__contacts-title contacts__title">Контакты</h2>
-            <address class="footer__contacts-address contacts__address">
-              <span class="contacts__icon">📍</span>Санкт-Петербург, набережная реки Карповки, дом 5
-            </address>
-            <p class="footer__contacts-phone contacts__phone">
-              <span class="contacts__icon">📞</span>
-              <a href="tel:+79999999999">+7 (999) 999-99-99</a>
-            </p>
-          </section>
+          <div class="footer__contacts">
+            <h2 class="footer-nav__title">Контакты</h2>
+            <address class="footer__contacts-address">Санкт-Петербург, набережная реки Карповки, дом 5</address>
+            <a class="footer__contacts-phone" href="tel:+79999999999">+7 (999) 999-99-99</a>
+          </div>
           <p class="footer__developer">Разработано в HTML Academy</p>
         </div>
       </nav>
