--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@
   </head>
   <body class="page__body">
     <header class="header">
-      <nav class="header__nav main-nav main-nav--is-close"><!-- is-close is-open -->
+      <nav class="header__nav main-nav main-nav--is-close main-nav--nojs">
         <a class="logo header__logo" href="index.html" aria-current="page">
           <span class="visually-hidden">На главную страницу</span>
           <picture>
@@ -31,7 +31,7 @@
           </button>
           <ul class="main-nav__list">
             <li class="main-nav__item"><a class="main-nav__link main-nav__link--active" href="index.html" aria-current="page">Главная</a></li>
-            <li class="main-nav__item"><a class="main-nav__link" href="catalog.html">Каталог&nbsp;продукции</a></li>
+            <li class="main-nav__item"><a class="main-nav__link" href="catalog.html">Каталог</a></li>
             <li class="main-nav__item"><a class="main-nav__link" href="#">Доставка</a></li>
             <li class="main-nav__item"><a class="main-nav__link" href="#">О нас</a></li>
           </ul>
