--- a/source/index.html
+++ b/source/index.html
@@ -7,6 +7,7 @@
     <link rel="preload" href="fonts/Montserrat-Regular.woff" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="preload" href="fonts/Montserrat-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"/>
   </head>
   <body class="page__body">
     <header class="header">
@@ -40,6 +41,17 @@
     </header>
     <main>
       <h1 class="visually-hidden">Интернет-магазин кофейных напитков</h1>
+      <div class="swiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide"><img class="slider__card-image" width="280" height="280" src="images/flat-white-img-mobile@1x.png" srcset="images/flat-white-img-mobile@1x.webp, images/flat-white-img-mobile@2x.webp 2x" alt="Decaf Flat White — кофейный напиток, в котором эспрессо без кофеина сочетается с тёплым молоком, взбитым до лёгкой бархатистой пены"></div>
+        <div class="swiper-slide"><img class="slider__card-image" width="280" height="280" src="images/flat-white-img-mobile@1x.png" srcset="images/flat-white-img-mobile@1x.webp, images/flat-white-img-mobile@2x.webp 2x" alt="Decaf Flat White — кофейный напиток, в котором эспрессо без кофеина сочетается с тёплым молоком, взбитым до лёгкой бархатистой пены"></div>
+        <div class="swiper-slide"><img class="slider__card-image" width="280" height="280" src="images/flat-white-img-mobile@1x.png" srcset="images/flat-white-img-mobile@1x.webp, images/flat-white-img-mobile@2x.webp 2x" alt="Decaf Flat White — кофейный напиток, в котором эспрессо без кофеина сочетается с тёплым молоком, взбитым до лёгкой бархатистой пены"></div>
+      </div>
+        <div class="swiper-pagination"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-scrollbar"></div>
+      </div>
       <section class="slider">
         <h2 class="visually-hidden">Слайдер.Новинки</h2>
         <button class="slider__button slider__arrow-left" type="button" aria-label="Листать в право"></button>
@@ -323,8 +335,8 @@
         </div>
       </nav>
     </footer>
-    <script src="./vendor/nouislider.min.js" type="module"></script>
+    <script src="./vendor/swiper/swiper-bundle.min.js" type="module"></script>
+    <script src="./vendor/nouislider/nouislider.min.js" type="module"></script>
     <script src="./scripts/index.js" type="module"></script>
-
   </body>
 </html>
